--- a/src/ui/components/Account/Account.css
+++ b/src/ui/components/Account/Account.css
@@ -52,11 +52,11 @@
 
 #header .title-label {
   color: var(--dark-blue);
-  font-size: 1.25rem;
-  overflow: hidden;
+  font-size: 20px;
   text-overflow: ellipsis;
   white-space: nowrap;
   background: none;
   line-height: 18px;
   margin-left: 8px;
+  font-weight: 600;
 }
