Add smooth invite flow

--- a/src/ui/components/shared/WorkspaceSettingsModal/WorkspaceMember.css
+++ b/src/ui/components/shared/WorkspaceSettingsModal/WorkspaceMember.css
@@ -45,6 +45,10 @@
   color: var(--theme-comment);
 }
 
+.workspace-settings-modal .workspace-member .material-icons {
+  font-size: 28px;
+}
+
 /* Permissions dropdown */
 
 .workspace-settings-modal .member-permissions .expand-dropdown {
