--- a/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
+++ b/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
@@ -63,8 +63,13 @@
   border-bottom: 1px solid var(--theme-splitter-color);
   position: sticky;
   top: 0px;
-  background: white;
   z-index: 1;
+}
+
+.recording-list.list thead.dashboard-viewer-content-header th.length,
+.recording-list.list thead.dashboard-viewer-content-header th.privacy,
+.recording-list.list thead.dashboard-viewer-content-header th.created {
+  padding-right: 16px;
 }
 
 .recording-list.list thead.dashboard-viewer-content-header th:first-child {
@@ -72,7 +77,7 @@
 }
 
 .recording-list.list thead.dashboard-viewer-content-header th:last-child {
-  padding-right: 40px;
+  padding-right: 20px;
 }
 
 .recording-list.list thead.dashboard-viewer-content-header .img {
