--- a/src/ui/components/Toolbox.css
+++ b/src/ui/components/Toolbox.css
@@ -1,6 +1,7 @@
 #toolbox {
   overflow: hidden;
   width: 100%;
+  height: 100%;
   font-family: sans-serif;
   display: flex;
   flex-direction: row;
