--- a/src/ui/components/shared/SettingsModal/SettingsBody.css
+++ b/src/ui/components/shared/SettingsModal/SettingsBody.css
@@ -11,36 +11,16 @@
 
 .settings-modal main ul {
   list-style-type: none;
-  overflow: auto;
+  /* overflow: auto; */
 }
 
-.settings-modal main ul > :not(:first-child) {
+.settings-modal main > ul > :not(:first-child) {
   margin-top: 32px
 }
 
 .settings-modal form {
   display: flex;
   flex-direction: row;
-}
-
-.settings-modal input[type="text"] {
-  margin-right: 8px;
-  background-color: #eee;
-  line-height: 16px;
-  padding: 8px;
-  flex-grow: 1;
-  border-radius: 4px;
-  border: 0px;
-}
-
-.settings-modal input[type="submit"] {
-  flex-shrink: 0;
-  color: white;
-  background: var(--dark-blue);
-  padding: 8px 12px;
-  cursor: pointer;
-  border-radius: 4px;
-  border: 0px;
 }
 
 /* Refresh Prompt */
