--- a/src/ui/components/Header/Header.css
+++ b/src/ui/components/Header/Header.css
@@ -70,7 +70,7 @@
 }
 
 #header .links > * {
-  margin-left: 16px;
+  margin-left: 8px;
 }
 
 #header .title {
@@ -91,6 +91,10 @@
   outline: none;
   background: none;
   width: 400px;
+}
+
+#header .sharebutton {
+  font-size: 16px;
 }
 
 button.login {
