--- a/src/ui/components/Dashboard/Dashboard.css
+++ b/src/ui/components/Dashboard/Dashboard.css
@@ -2,7 +2,9 @@ main.dashboard {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  z-index: 0; /* This is to make sure that the dashboard's children appear below the Header's dropdown menu. */
 }
 
 .dashboard-viewer {
@@ -15,7 +17,6 @@ main.dashboard {
 
 .dashboard-viewer *:focus:not(:focus-visible) {
   outline: none;
-  background: inherit;
 }
 
 .dashboard-viewer .dashboard-viewer-content {
