--- a/src/ui/components/shared/LoginModal.css
+++ b/src/ui/components/shared/LoginModal.css
@@ -5,19 +5,6 @@
 }
 
 .login-modal .modal-content {
-  height: min-content;
-}
-
-.login-modal .modal-content > * {
-  margin-bottom: 20px;
-}
-
-.login-modal .title {
-  font-size: 16px;
-  font-weight: bold;
-  justify-content: center;
-}
-
-.login-modal .modal-content .bottom {
-  justify-content: space-around;
+  min-height: min-content;
+  min-width: min-content;
 }
