--- a/src/ui/components/shared/Modal.css
+++ b/src/ui/components/shared/Modal.css
@@ -3,6 +3,9 @@
   width: 100%;
   height: 100%;
   z-index: var(--z-index-8--modal);
+  display: grid;
+  align-items: center;
+  justify-items: center;
 }
 
 .modal-mask {
@@ -24,11 +27,6 @@
   min-height: 480px;
   border-radius: 8px;
   padding: 20px;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
   background: var(--theme-toolbar-background);
   color: var(--theme-toolbar-color);
   box-shadow: rgba(15, 15, 15, 0.05) 0px 0px 0px 1px, rgba(15, 15, 15, 0.1) 0px 3px 6px, rgba(15, 15, 15, 0.2) 0px 9px 24px;
