--- a/src/devtools/server/actors/highlighters.css
+++ b/src/devtools/server/actors/highlighters.css
@@ -38,7 +38,7 @@
 }
 
 /**
- * Highlighters are asbolute positioned in the page by default.
+ * Highlighters are absolute positioned in the page by default.
  * A single highlighter can have fixed position in its css class if needed (see below the
  * eye dropper or rulers highlighter, for example); but if it has to handle the
  * document's scrolling (as rulers does), it would lag a bit behind due the APZ (Async
@@ -141,12 +141,9 @@
 
 /* Arrows */
 
-#highlighter-root
-  [class$="infobar-container"]
-  > [class$="infobar"]:before {
+#highlighter-root [class$="infobar-container"] > [class$="infobar"]:before {
   left: calc(50% - var(--highlighter-bubble-arrow-size));
-  border: var(--highlighter-bubble-arrow-size) solid
-    var(--highlighter-bubble-border-color);
+  border: var(--highlighter-bubble-arrow-size) solid var(--highlighter-bubble-border-color);
 }
 
 #highlighter-root [class$="infobar-container"] > [class$="infobar"]:after {
@@ -482,7 +479,7 @@
   cursor: nwse-resize;
 }
 
-#highlighter-root [class^=measuring-tool-handler].dragging {
+#highlighter-root [class^="measuring-tool-handler"].dragging {
   fill: var(--highlighter-guide-color);
 }
 
@@ -519,7 +516,7 @@
   line-height: 1.5em;
 }
 
-#highlighter-root [class^=measuring-tool-guide] {
+#highlighter-root [class^="measuring-tool-guide"] {
   stroke: var(--highlighter-guide-color);
   stroke-dasharray: 5 3;
   shape-rendering: crispEdges;
@@ -544,10 +541,7 @@
   pointer-events: auto;
 
   /* Offset the UI so it is centered around the pointer */
-  transform: translate(
-    calc(var(--magnifier-width) / -2),
-    calc(var(--magnifier-height) / -2)
-  );
+  transform: translate(calc(var(--magnifier-width) / -2), calc(var(--magnifier-height) / -2));
 
   filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.4));
 
@@ -573,16 +567,10 @@
   height: var(--label-height);
   position: relative;
 
-  --label-horizontal-center: translateX(
-    calc((var(--magnifier-width) - var(--label-width)) / 2)
-  );
-  --label-horizontal-left: translateX(
-    calc((-1 * var(--label-width) + var(--magnifier-width) / 2))
-  );
+  --label-horizontal-center: translateX(calc((var(--magnifier-width) - var(--label-width)) / 2));
+  --label-horizontal-left: translateX(calc((-1 * var(--label-width) + var(--magnifier-width) / 2)));
   --label-horizontal-right: translateX(calc(var(--magnifier-width) / 2));
-  --label-vertical-top: translateY(
-    calc((-1 * var(--magnifier-height)) - var(--label-height))
-  );
+  --label-vertical-top: translateY(calc((-1 * var(--magnifier-height)) - var(--label-height)));
 
   /* By default the color label container sits below the canvas.
      Here we just center it horizontally */
@@ -600,9 +588,7 @@
 #highlighter-root .eye-dropper-root[left] .eye-dropper-color-container {
   transform: var(--label-horizontal-left);
 }
-#highlighter-root
-  .eye-dropper-root[left][top]
-  .eye-dropper-color-container {
+#highlighter-root .eye-dropper-root[left][top] .eye-dropper-color-container {
   transform: var(--label-horizontal-left) var(--label-vertical-top);
 }
 
@@ -611,9 +597,7 @@
 #highlighter-root .eye-dropper-root[right] .eye-dropper-color-container {
   transform: var(--label-horizontal-right);
 }
-#highlighter-root
-  .eye-dropper-root[right][top]
-  .eye-dropper-color-container {
+#highlighter-root .eye-dropper-root[right][top] .eye-dropper-color-container {
   transform: var(--label-horizontal-right) var(--label-vertical-top);
 }
 
@@ -831,8 +815,7 @@
   width: 8px;
   display: inline-flex;
   background-color: var(--accessibility-highlighter-contrast-ratio-color);
-  box-shadow: 0 0 0 1px var(--grey-40),
-    4px 3px var(--accessibility-highlighter-contrast-ratio-bg),
+  box-shadow: 0 0 0 1px var(--grey-40), 4px 3px var(--accessibility-highlighter-contrast-ratio-bg),
     4px 3px 0 1px var(--grey-40);
   margin-inline-start: 3px;
   margin-inline-end: 9px;
@@ -844,7 +827,7 @@
 
 #highlighter-root .accessible-infobar-audit .accessible-contrast-ratio.AA::after,
 #highlighter-root .accessible-infobar-audit .accessible-contrast-ratio.AAA::after {
-  color: #90E274;
+  color: #90e274;
 }
 
 #highlighter-root .accessible-infobar-audit .accessible-audit::before,
@@ -860,7 +843,7 @@
 }
 
 #highlighter-root .accessible-infobar-audit .accessible-contrast-ratio.FAIL:after {
-  color: #E57180;
+  color: #e57180;
   margin-inline-start: 3px;
   background-image: url(chrome://devtools/skin/images/error-small.svg);
   fill: var(--red-40);
