--- a/src/ui/components/Header/ViewToggle.css
+++ b/src/ui/components/Header/ViewToggle.css
@@ -1,5 +1,5 @@
 .view-toggle {
-  font-family: "Open Sans", sans-serif;
+  font-family: system-ui, Arial, sans-serif;
   display: flex;
   padding: 2px 0;
   cursor: pointer;
@@ -8,8 +8,8 @@
   width: auto;
   appearance: none;
   border: none;
-  outline: 0;
   border-radius: 8px;
+  outline: none !important;
 }
 
 .view-toggle .inner {
