--- a/src/ui/components/Comments/TranscriptComments/CommentEditor/CommentEditor.css
+++ b/src/ui/components/Comments/TranscriptComments/CommentEditor/CommentEditor.css
@@ -36,7 +36,6 @@
 .transcript-list .comment-input-actions button.action-cancel {
   text-decoration: underline;
   font-size: 12px;
-  color: var(--theme-comment);
 }
 
 .transcript-list .comment-input-actions button.action-submit {
@@ -57,7 +56,7 @@
   /* Create a positioning context for the emoji picker */
   position: relative;
   padding: 4px 8px;
-  border: 1px solid var(--primary-accent);
+  border: 1px solid var(--cool-gray-200);
   border-radius: 4px;
   flex-grow: 1;
 }
