Add video player from dispatcher messages (#2471)

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,9 +34,13 @@ html {
   height: 100%;
 }
 
-#graphics {
-  position: relative;
+#graphics, #graphicsVideo {
+  position: absolute;
   transform-origin: top left;
+}
+
+#graphicsVideo {
+  max-width: unset;
 }
 
 .collapsed-toolbox #graphics {
