--- a/src/ui/components/Header/UserOptions.css
+++ b/src/ui/components/Header/UserOptions.css
@@ -8,16 +8,20 @@
   padding: 0px 4px;
 }
 
+.material-icons {
+  font-size: 22px;
+}
+
 .user-options .material-icons.more {
-  border: 2px solid var(--theme-icon-dimmed-color);
+  border: 2px solid var(--cool-gray-200);
   border-radius: 50%;
   cursor: pointer;
-  color: var(--theme-icon-dimmed-color);
+  color: var(--cool-gray-400);
+  background-color: var(--cool-gray-200);
 }
 
 .user-options .material-icons.more:hover {
-  color: var(--theme-icon-color);
-  border: 2px solid var(--theme-icon-color);
+  background-color: #fff;
 }
 
 .user-options button.expand-dropdown .avatar.first-player img {
