CSS tweaks to make the header not jump around

--- a/src/ui/components/Comments/TranscriptComments/CommentEditor/CommentEditor.css
+++ b/src/ui/components/Comments/TranscriptComments/CommentEditor/CommentEditor.css
@@ -64,7 +64,7 @@
 .transcript-list .responsive-textarea {
   overflow-y: hidden;
   resize: none;
-  font-family: sans-serif;
+  font-family: system-ui, Arial, sans-serif;
   line-height: 18px;
   border: none;
 }
