--- a/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
+++ b/src/devtools/client/debugger/src/components/Editor/Breakpoints/Panel/Panel.css
@@ -11,7 +11,7 @@
   background: var(--theme-toolbar-background);
   border-radius: 4px;
   border: 1px solid var(--theme-splitter-color);
-  font-family: sans-serif;
+  font-family: system-ui, Arial, sans-serif;
   line-height: 16px;
   color: var(--theme-toolbar-color);
   max-width: 500px;
