--- a/src/devtools/client/debugger/src/utils/editor/source-editor.css
+++ b/src/devtools/client/debugger/src/utils/editor/source-editor.css
@@ -111,9 +111,8 @@ selector in floating-scrollbar-light.css across all platforms. */
 
 .CodeMirror-foldmarker {
   color: blue;
-  text-shadow: #b9f 1px 1px 2px, #b9f -1px -1px 2px, #b9f 1px -1px 2px,
-    #b9f -1px 1px 2px;
-  font-family: sans-serif;
+  text-shadow: #b9f 1px 1px 2px, #b9f -1px -1px 2px, #b9f 1px -1px 2px, #b9f -1px 1px 2px;
+  font-family: system-ui, Arial, sans-serif;
   line-height: 0.3;
   cursor: pointer;
 }
