Cleaning up styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,8 @@ html {
   height: 100%;
 }
 
-#graphics, #graphicsVideo {
+#graphics,
+#graphicsVideo {
   position: absolute;
   transform-origin: top left;
 }
