--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -59,15 +59,15 @@
   --new-blue-800: #2569ad;
   --new-blue-900: #215487;
 
-  --cool-gray-50: #F9FAFB;
-  --cool-gray-100: #F3F4F6;
-  --cool-gray-200: #E5E7EB;
-  --cool-gray-300: #D1D5DB;
-  --cool-gray-400: #9CA3AF;
-  --cool-gray-500: #6B7280;
-  --cool-gray-600: #4B5563;
+  --cool-gray-50: #f9fafb;
+  --cool-gray-100: #f3f4f6;
+  --cool-gray-200: #e5e7eb;
+  --cool-gray-300: #d1d5db;
+  --cool-gray-400: #9ca3af;
+  --cool-gray-500: #6b7280;
+  --cool-gray-600: #4b5563;
   --cool-gray-700: #374151;
-  --cool-gray-800: #1F2937;
+  --cool-gray-800: #1f2937;
   --cool-gray-900: #111827;
 
   --magenta-50: #ff1ad9;
@@ -138,7 +138,6 @@
   /* Toolbar */
   --theme-tab-toolbar-background: var(--grey-10);
   --theme-toolbar-background: var(--grey-10);
-  --theme-toolbar-color: var(--grey-90);
   --theme-toolbar-selected-color: var(--blue-60);
   --theme-toolbar-highlighted-color: var(--green-60);
   --theme-toolbar-background-hover: rgba(221, 225, 228, 0.66);
@@ -217,7 +216,7 @@
   /* Common popup styles(used by HTMLTooltip and autocomplete) */
   --theme-popup-background: white;
   --theme-popup-color: var(--grey-70);
-  --theme-errant-popup-color: #991B1B;
+  --theme-errant-popup-color: #991b1b;
   --theme-popup-border-color: ThreeDShadow;
   --theme-popup-dimmed: hsla(0, 0%, 80%, 0.3);
 
@@ -269,7 +268,7 @@
   /* Toolbar */
   --theme-tab-toolbar-background: var(--grey-90);
   --theme-toolbar-background: #18181a;
-  --theme-toolbar-color: var(--grey-40);
+  --theme-toolbar-color: var(--grey-20);
   --theme-toolbar-selected-color: white;
   --theme-toolbar-highlighted-color: var(--green-50);
   --theme-toolbar-background-hover: #232327;
