Aligning font sizes better

--- a/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
+++ b/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
@@ -28,7 +28,7 @@
 }
 
 .secondary-toolbox-header button {
-  font-size: 1.1rem;
+  font-size: 12px;
   padding: 8px 12px;
   cursor: pointer;
   transition: color 200ms;
