--- a/src/ui/components/Views/NonDevView.css
+++ b/src/ui/components/Views/NonDevView.css
@@ -10,8 +10,11 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 12px 24px;
+  padding: 8px;
   justify-content: space-between;
+  border-bottom: 1px solid var(--theme-splitter-color);
+  margin-bottom: 8px;
+  background-color: var(--theme-accordion-header-background);
 }
 
 .right-sidebar-toolbar-item {
