--- a/src/devtools/client/shared/components/Accordion.css
+++ b/src/devtools/client/shared/components/Accordion.css
@@ -58,8 +58,8 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 15px;
+  padding: 8px;
   color: var(--theme-toolbar-color);
 }
 
