--- a/src/styles.css
+++ b/src/styles.css
@@ -4,15 +4,12 @@
   flex-direction: column;
   height: 100%;
   font-family: system-ui, Arial, sans-serif;
+  color: var(--theme-body-color);
   --light-grey: #969696;
   --dark-grey: #696969;
   --light-blue: #61cdff;
   --dark-blue: #2d7eff;
   --faint-red: rgba(255, 0, 0, 0.5);
-}
-
-.defaultfont {
-  font-family: system-ui, Arial, sans-serif;
 }
 
 /* NOTE: this is added to protect against React DevTools */
