Tweaking the WelcomeBox because O and 0 look too similar

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.css
@@ -118,7 +118,7 @@
   font-size: 11px;
   margin-top: 1px;
   margin-right: 1em;
-  font-family: Menlo, Consolas, monospace;
+  font-family: var(--monospace-font-family);
   color: var(--blue-80);
 }
 
