--- a/src/devtools/client/themes/common.css
+++ b/src/devtools/client/themes/common.css
@@ -181,14 +181,7 @@ button::selection {
       #ccc 75%,
       #ccc
     ),
-    linear-gradient(
-      45deg,
-      #ccc 25%,
-      transparent 25%,
-      transparent 75%,
-      #ccc 75%,
-      #ccc
-    );
+    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
   background-size: 12px 12px;
   background-position: 0 0, 6px 6px;
   position: absolute;
@@ -289,7 +282,7 @@ textbox :-moz-focusring {
   outline: none;
 }
 
-/* Form fields should already have box-shadow hightlight */
+/* Form fields should already have box-shadow highlight */
 select:-moz-focusring,
 input[type="radio"]:-moz-focusring,
 input[type="checkbox"]:-moz-focusring,
@@ -723,8 +716,7 @@ checkbox:-moz-focusring {
   width: 100%;
   height: 2px;
   background: transparent;
-  transition: transform 250ms var(--animation-curve),
-    opacity 250ms var(--animation-curve);
+  transition: transform 250ms var(--animation-curve), opacity 250ms var(--animation-curve);
   opacity: 0;
   transform: scaleX(0);
 }
